--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             <link href="style.css" rel="stylesheet">
             <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
             <link href='http://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-            <link href='http://fonts.googleapis.com/css?family=Consolas:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-            <link href='http://fonts.googleapis.com/css?family=Raleway:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=Source Sans Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
             <!-- Navigation -->
