Google Font API issue

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
             <meta name="author" content="kyler boyle" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0;">
             <link href="style.css" rel="stylesheet">
-            <link href='http://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-            <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
             <!-- Navigation -->
@@ -155,10 +156,10 @@
                 <div  id ="footer"><div class="inner">
                     <span class="right">
                         <a target="_blank" href="mailto:me@kylerboyle.com">Email</a>&nbsp;&nbsp;//&nbsp;
-                        <a target="_blank" href="http://www.linkedin.com/in/kylerboyle">LinkedIn</a>&nbsp;&nbsp;
+                        <a target="_blank" href="https://www.linkedin.com/in/kylerboyle">LinkedIn</a>&nbsp;&nbsp;
                     </span>
                 </div></div>
-                <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
                 <script src="jquery.fixedTOC.js?v=3.0"></script>
                         <script>
                             // call the plugin on the "#toc" element
