--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0;">
             <link href="style.css" rel="stylesheet">
             <link href='https://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-            <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,400italic,700,700italic,700Bold' rel='stylesheet' type='text/css'>
             <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
