Fixed link color

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <span class="right"><i>Spring 2017</i></span><br/>
                     <b>Study Abroad</b>
                     <span class="right"><i>Reykjavik, Iceland</i></span><br/><br/>
-                    Studied renewable energy technologies in and around Reykjavik. Designed a capstone project for a fully sustainable gym concept and presented it to lead researchers at the University. Exploration video can be found <a target="_blank" href="https://youtu.be/iQT8kuVgYZs">here</a>!<br/><br/>
+                    Studied renewable energy technologies in and around Reykjavik. Designed a capstone project for a fully sustainable gym concept and presented it to lead researchers at the University. Exploration video can be found <a target="_blank" href="https://youtu.be/iQT8kuVgYZs"><font color="3366BB">here</font></a>!<br/><br/>
                     <span class="skill">Sustainability</span>
                     </p>
                     <br/>
