--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: "KeyError: 'endDate'"<br/>
                             <br/></span>
                             &gt; Kyler.getResume()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank">Upon Request</a>"<br/><br/></span>
+                            <span class="answer">&nbsp;&nbsp;=&gt; "Upon Request"<br/><br/></span>
                             &gt; Kyler.getContactInfo()<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; Kyler's Contact Info<br/>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; email:
