Updated Industries and removed location

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
                     <!-- Console -->
                     <div id="code">
                         <div id="console">
-                            &gt; Kyler.getLocation()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; "Cupertino, CA"<br/><br/></span>
                             &gt; Kyler.getUniversity()<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; "University of Illinois at Chicago"<br/><br/></span>
                             &gt; Kyler.getMajor()<br/>
@@ -52,7 +50,7 @@
                             &gt; Kyler.getKeyInterests()<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; ["code", "wine", "coffee", "music", "cooking", "trading"]<br/><br/></span>
                             &gt; Kyler.getIndustries()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; ["Mobile Development", "Financial Markets", "Consumer Electronics"]<br/><br/></span>
+                            <span class="answer">&nbsp;&nbsp;=&gt; ["Embedded Systems", "Consumer Electronics", "Financial Markets"]<br/><br/></span>
                             &gt; Kyler.getWorkExperience().mostRecent<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; Most Recent Work Experience<br/>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "Apple Inc"<br/>
