Removed Embedded Systems from industries - not an industry lol

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             &gt; Kyler.getKeyInterests()<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; ["code", "wine", "coffee", "music", "cooking", "trading"]<br/><br/></span>
                             &gt; Kyler.getIndustries()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; ["Embedded Systems", "Consumer Electronics", "Financial Markets"]<br/><br/></span>
+                            <span class="answer">&nbsp;&nbsp;=&gt; ["Consumer Electronics", "Financial Markets"]<br/><br/></span>
                             &gt; Kyler.getWorkExperience().mostRecent<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; Most Recent Work Experience<br/>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "Apple Inc"<br/>
