Update work experience and interests

--- a/index.html
+++ b/index.html
@@ -41,22 +41,16 @@
                     <!-- Console -->
                     <div id="code">
                         <div id="console">
-                            &gt; Kyler.getUniversity()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; "University of Illinois at Chicago"<br/><br/></span>
-                            &gt; Kyler.getMajor()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; "Computer Science"<br/><br/></span>
-                            &gt; Kyler.getGraduationDate()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; "May 2019"<br/><br/></span>
-                            &gt; Kyler.getKeyInterests()<br/>
-                            <span class="answer">&nbsp;&nbsp;=&gt; ["code", "wine", "coffee", "music", "cooking", "trading"]<br/><br/></span>
+                            &gt; Kyler.getInterests()<br/>
+                            <span class="answer">&nbsp;&nbsp;=&gt; ["tennis", "code", "coffee", "music", "cooking", "trading"]<br/><br/></span>
                             &gt; Kyler.getIndustries()<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; ["Consumer Electronics", "Financial Markets"]<br/><br/></span>
                             &gt; Kyler.getWorkExperience().mostRecent<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; Most Recent Work Experience<br/>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "Apple Inc"<br/>
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; role: "Software Engineer"<br/>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; role: "Senior Software Engineer"<br/>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; startDate: "June 2019"<br/>
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: "KeyError: 'endDate'"<br/>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: KeyError: 'endDate'<br/>
                             <br/></span>
                             &gt; Kyler.getResume()<br/>
                             <span class="answer">&nbsp;&nbsp;=&gt; "Upon Request"<br/><br/></span>
@@ -85,6 +79,9 @@
                     <span class="right"><i>June 2019 - </i></span><br/>
                     <b>Software Engineer</b>
                     <span class="right"><i>Cupertino, CA</i></span><br/><br/>
+                    Memeber of the Core OS platform bringup organization. Work in pre and post silicon environments to ensure stability across all targets for a platform.
+                    Built a ground-up data pipeline for internal silicon/software stress rack data to monitor stability of our platforms pre-ship.<br/><br/>
+                    <span class="skill">C</span><span class="skill">Embedded Systems</span><span class="skill">Python</span>
                     </p>
                     <br/>
                     
